# ai-chat-with-research-papers-aws-lambda

./: README.md  README_bkp.md  app.py  extractors.py  llm.py  main.py  prompts.py  pyproject.toml  test-key.py
chat_with_paper/: lambda_function.py  llm.py  prompts.py
frontend/: index.html  main.css  main.js
research-paper-summarizer/: extractors.py  lambda_function.py  llm.py  prompts.py
static/: main.css  main.js
templates/: index.html
